@@ -24,6 +24,8 @@
 
   - New style for breadcrumb
 
+  - New style for navbar
+
 - New Palette based on a work by Tobias Bernard for the Fractal application
 
   - Color that aren't based on semantics
